<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2010-2011, The MiCode Open Source Community (www.micode.net)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Notes</string>
    <string name="app_widget2x2">Notes 2x2</string>
    <string name="app_widget4x4">Notes 4x4</string>
    <string name="widget_havenot_content">No associated note found, click to create associated note.</string>
    <string name="widget_under_visit_mode">Privacy mode，can not see note content</string>
    <string name="notelist_string_info">...</string>
    <string name="notelist_menu_new">添加笔记</string>
    <string name="delete_remind_time_message">删除时间提醒成功</string>
    <string name="set_remind_time_message">设置时间提醒</string>
    <string name="note_alert_expired">Expired</string>
    <string name="format_date_ymd">yyyyMMdd</string>
    <string name="format_datetime_mdhm">MMMd kk:mm</string>
    <string name="notealert_ok">知道了</string>
    <string name="notealert_enter">看一下</string>
    <string name="note_link_tel">Call</string>
    <string name="note_link_email">Send email</string>
    <string name="note_link_web">Browse web</string>
    <string name="note_link_other">Open map</string>

    <!-- Text export file information -->
    <string name="file_path" translatable="false">/MIUI/notes/</string>
    <string name="file_name_txt_format" translatable="false">notes_%s.txt</string>
    <!-- notes list string -->
    <string name="format_folder_files_count" translatable="false">(%d)</string>

    <!--首页的背景图切换-->
    <string name="menu_hutao" translatable="false">背景切换:胡桃</string>
    <string name="menu_keli" translatable="false">背景切换:可莉</string>
    <string name="menu_create_folder">新建文件夹</string>
    <string name="menu_export_text">导出文本</string>
    <string name="menu_sync">同步</string>
    <string name="menu_sync_cancel">取消同步</string>
    <string name="menu_setting">设置</string>
    <string name="menu_search">搜索</string>
    <string name="menu_delete">删除</string>
    <string name="menu_move">移动到文件夹</string>
    <string name="menu_select_title">%d 选中</string>
    <string name="menu_select_none">未选择任何内容，操作无效</string>
    <string name="menu_select_all">全部选中</string>
    <string name="menu_deselect_all">取消全部选中</string>
    <string name="menu_font_size">字体大小</string>
    <string name="menu_font_small">小</string>
    <string name="menu_font_normal">中</string>
    <string name="menu_font_large">大</string>
    <string name="menu_font_super">超级大</string>
    <string name="menu_list_mode">进入选择列表</string>
    <string name="menu_normal_mode">离开选择列表</string>
    <string name="menu_folder_view">查看文件夹</string>
    <string name="menu_folder_delete">删除文件夹</string>
    <string name="menu_folder_change_name">改变文件夹名称</string>
    <string name="folder_exist">文件夹%1$s 已存在, 请重命名</string>
    <string name="menu_share">分享</string>
    <string name="menu_send_to_desktop">发送桌面</string>
    <string name="menu_alert">定时提醒我</string>
    <string name="menu_remove_remind">删除定时提醒</string>
    <string name="join_password" translatable="false">加入笔记锁</string>
    <string name="out_password" translatable="false">删除笔记锁</string>
    <string name="menu_title_select_folder">选择文件夹</string>
    <string name="menu_move_parent_folder">根目录</string>
    <string name="info_note_enter_desktop">笔记添加到桌面</string>
    <string name="alert_message_delete_folder">确认删除文件夹及其笔记？</string>
    <string name="alert_title_delete">删除选中的笔记</string>
    <string name="alert_message_delete_notes">确定删除选中的 %d 笔记?</string>
    <string name="alert_message_delete_note">确认删除笔记?</string>
    <string name="format_move_notes_to_folder">已经移动选中的 %1$d 笔记到 %2$s 文件夹</string>
    <!-- Error information -->
    <string name="error_sdcard_unmounted">SD card busy, not available now</string>
    <string name="error_sdcard_export">Export failed, please check SD card</string>
    <string name="error_note_not_exist">The note is not exist</string>
    <string name="error_note_empty_for_clock">Sorry, can not set clock on empty note</string>
    <string name="error_note_empty_for_send_to_desktop">Sorry, can not send and empty note to home</string>
    <string name="success_sdcard_export">Export successful</string>
    <string name="failed_sdcard_export">Export fail</string>
    <string name="format_exported_file_location">Export text file (%1$s) to SD (%2$s) directory</string>
    <!-- Sync -->
    <string name="ticker_syncing">Syncing notes...</string>
    <string name="ticker_success">Sync is successful</string>
    <string name="ticker_fail">Sync is failed</string>
    <string name="ticker_cancel">Sync is canceled</string>
    <string name="success_sync_account">Sync is successful with account %1$s</string>
    <string name="error_sync_network">Sync failed, please check network and account settings</string>
    <string name="error_sync_internal">Sync failed, internal error occurs</string>
    <string name="error_sync_cancelled">Sync is canceled</string>
    <string name="sync_progress_login">Logging into %1$s...</string>
    <string name="sync_progress_init_list">Getting remote note list...</string>
    <string name="sync_progress_syncing">Synchronize local notes with Google Task...</string>
    <!-- Preferences -->
    <string name="preferences_title">Settings</string>
    <string name="preferences_account_title">Sync account</string>
    <string name="preferences_account_summary">Sync notes with google task</string>
    <string name="preferences_last_sync_time">Last sync time %1$s</string>
    <string name="preferences_last_sync_time_format" translatable="false">yyyy-MM-dd hh:mm:ss</string>
    <string name="preferences_add_account">Add account</string>
    <string name="preferences_menu_change_account">Change sync account</string>
    <string name="preferences_menu_remove_account">Remove sync account</string>
    <string name="preferences_menu_cancel">Cancel</string>
    <string name="preferences_button_sync_immediately">Sync immediately</string>
    <string name="preferences_button_sync_cancel">Cancel syncing</string>
    <string name="preferences_dialog_change_account_title">Current account %1$s</string>
    <string name="preferences_dialog_change_account_warn_msg">All sync related information will be deleted, which may result in duplicated items sometime</string>
    <string name="preferences_dialog_select_account_title">Sync notes</string>
    <string name="preferences_dialog_select_account_tips">Please select a google account. Local notes will be synced with google task.</string>
    <string name="preferences_toast_cannot_change_account">Cannot change the account because sync is in progress</string>
    <string name="preferences_toast_success_set_accout">%1$s has been set as the sync account</string>
    <string name="preferences_bg_random_appear_title">New note background color random</string>

    <string name="button_delete">删除</string>
    <string name="call_record_folder_name">Call notes</string>
    <string name="hint_foler_name">Input name</string>

    <string name="search_label">Searching Notes</string>
    <string name="search_hint">Search notes</string>
    <string name="search_setting_description">Text in your notes</string>
    <string name="search">Notes</string>
    <string name="datetime_dialog_ok">设置</string>
    <string name="datetime_dialog_cancel">取消</string>
    <plurals name="search_results_title">
        <item quantity="one"><xliff:g example="1" id="number">%1$s</xliff:g> result for \"<xliff:g example="???" id="search">%2$s</xliff:g>\"</item>
        <!-- Case of 0 or 2 or more results. -->
        <item quantity="other"><xliff:g example="15" id="number">%1$s</xliff:g> results for \"<xliff:g example="???" id="search">%2$s</xliff:g>\"</item>
    </plurals>

    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">  便签启动！</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="prompt_account" translatable="false">欢迎进入登陆界面</string>
    <string name="prompt_login" translatable="false">注册</string>
    <string name="menu_moren" translatable="false">默认背景</string>

    <string name="menu_secret" translatable="false">私密模式</string>
    <string name="menu_quit_secret" translatable="false">退出私密模式</string>
    <string name="set_password" translatable="false">设置笔记锁密码</string>

</resources>
