<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2010-2011, The MiCode Open Source Community (www.micode.net)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:id="@+id/menu_hutao"-->
<!--        android:title="@string/menu_hutao" />-->
<!--    <item-->
<!--        android:id="@+id/menu_keli"-->
<!--        android:title="@string/menu_keli" />-->
<!--    <item-->
<!--        android:id="@+id/menu_moren"-->
<!--        android:title="@string/menu_moren"/>-->

    <item
        android:id="@+id/menu_new_note"
        android:title="@string/notelist_menu_new"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"/>

    <item
        android:id="@+id/menu_font_size"
        android:title="@string/menu_font_size"/>

    <item
        android:id="@+id/menu_list_mode"
        android:title="@string/menu_list_mode" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"/>

    <item
        android:id="@+id/menu_send_to_desktop"
        android:title="@string/menu_send_to_desktop"/>

    <item
        android:id="@+id/menu_alert"
        android:title="@string/menu_alert" />

    <item
        android:id="@+id/menu_delete_remind"
        android:title="@string/menu_remove_remind" />

    <item
        android:id="@+id/menu_select_image"
        android:title="选择插入图片" />
    <item
        android:id="@+id/join_password"
        android:title="@string/join_password"/>
    <item
        android:id="@+id/out_password"
        android:title="@string/out_password"/>
    <item
        android:id="@+id/menu_insert_audio"
        android:title="插入语音消息" />

    <item
        android:id="@+id/menu_export_png"
        android:title="保存为图片" />
    <item
        android:id="@+id/menu_export_text"
        android:title="保存为文本文件" />
    <item
        android:id="@+id/menu_export_doc"
        android:title="保存为word文档" />
</menu>